samples/_failures_safe/1761359104_151a80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_86e7c304.c: In function ‘main’:
./samples/SAFE/__tmp_86e7c304.c:160:53: error: expected ‘)’ at end of input
  160 |         printf("%-4d %-3d %-10s  '%s'\n", token.line
      |               ~                                     ^
      |                                                     )
./samples/SAFE/__tmp_86e7c304.c:160:9: error: expected declaration or statement at end of input
  160 |         printf("%-4d %-3d %-10s  '%s'\n", token.line
      |         ^~~~~~
./samples/SAFE/__tmp_86e7c304.c:160:9: error: expected declaration or statement at end of input
